--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,7 @@ runs:
   using: "composite"
   steps:
     - name: Make ImageMagik permissive
+      shell: bash
       run: sudo sed -i 's/rights=".*"/rights="all"/' /etc/ImageMagick-6/policy.xml
     # Checkout the repository
     - name: Checkout
@@ -19,7 +20,6 @@ runs:
     - name: Autotag
       uses: DanySK/semver-autotag-action@0.1.0
     - name: Deploy
-      if: ${{ startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/default' }}
       shell: bash
       run: |
         GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
