--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,7 +1,7 @@
-tagFormat: "${version}"
+branches:
+  - master
+extends:
+  - semantic-release-preconfigured-conventional-commits
 plugins: 
-  - "@semantic-release/commit-analyzer"
-  - "@semantic-release/release-notes-generator"
-  - "@semantic-release/changelog"
   - "@semantic-release/github"
   - "@semantic-release/git"
