--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "A composite action taking care of running a complete CI pipeline on a Gradle project",
   "author": "Danilo Pianini (https://danysk.github.io)",
   "devDependencies": {
-    "@semantic-release/changelog": "6.0.1",
-    "@semantic-release/git": "10.0.1"
+    "semantic-release-preconfigured-conventional-commits": "^1.0.1"
   },
   "engines": {
     "node": "16.13"
