fix(release): fix module name

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -3,7 +3,7 @@ branches:
 extends:
   - semantic-release-preconfigured-conventional-commits
 plugins:
-  - "@@semantic-release/release-notes-generator"
+  - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
   - "@semantic-release/github"
   - "@semantic-release/git"
