ci(release): enable commit-analyzer

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -3,6 +3,7 @@ branches:
 extends:
   - semantic-release-preconfigured-conventional-commits
 plugins:
+  - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
   - "@semantic-release/github"
