--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
     - name: Checkout
       uses: danysk/action-checkout@0.2.1
     - name: Prepare the differential documents
-      uses: DanySK/auto-latexdiff@master # Please select a stable release here!
+      uses: DanySK/auto-latexdiff@63.0.11
       id: latexdiff
       if: inputs.diff-enable == 'true'
       with:
