feat: disable support for latex-autodiff

--- a/action.yml
+++ b/action.yml
@@ -4,28 +4,28 @@ inputs:
   token:  # github token
     description: 'Github token for deployment.'
     required: true
-  diff-enable:
-    description: 'Github token for deployment. Skips deployment otherwise.'
-    required: false
-    default: false
-  diff-files:
-    description: Latex files (globs) to diff, if diff enabled
-    required: false
-    default: |
-      **/*.tex
-  diff-lightweight-tags:
-    description: Whether non-annotated tags should be considered
-    required: false
-    default: false
-  diff-tag-regex:
-    description: Newline-separated list of tags to create differential documents with. Ruby Regex syntax supported.
-    required: false
-    default: |
-      .*
-  publish-enable:
-    description: 'Whether the results should be deployed on GitHub. Defaults to true.'
-    required: false
-    default: true
+#  diff-enable:
+#    description: 'Github token for deployment. Skips deployment otherwise.'
+#    required: false
+#    default: false
+#  diff-files:
+#    description: Latex files (globs) to diff, if diff enabled
+#    required: false
+#    default: |
+#      **/*.tex
+#  diff-lightweight-tags:
+#    description: Whether non-annotated tags should be considered
+#    required: false
+#    default: false
+#  diff-tag-regex:
+#    description: Newline-separated list of tags to create differential documents with. Ruby Regex syntax supported.
+#    required: false
+#    default: |
+#      .*
+#  publish-enable:
+#    description: 'Whether the results should be deployed on GitHub. Defaults to true.'
+#    required: false
+#    default: true
 
 runs:
   using: "composite"
@@ -36,14 +36,14 @@ runs:
     # Checkout the repository
     - name: Checkout
       uses: danysk/action-checkout@0.2.14
-    - name: Prepare the differential documents
-      uses: DanySK/auto-latexdiff@64.1.1
-      id: latexdiff
-      if: inputs.diff-enable == 'true'
-      with:
-        files: ${{ inputs.diff-files }}
-        include-lightweight-tags: ${{ inputs.diff-lightweight-tags }}
-        tags: ${{ inputs.diff-tag-regex }}
+#    - name: Prepare the differential documents
+#      uses: DanySK/auto-latexdiff@64.1.1
+#      id: latexdiff
+#      if: inputs.diff-enable == 'true'
+#      with:
+#        files: ${{ inputs.diff-files }}
+#        include-lightweight-tags: ${{ inputs.diff-lightweight-tags }}
+#        tags: ${{ inputs.diff-tag-regex }}
     - name: Compile LaTeX
       uses: DanySK/compile-latex-action@0.4.8
     - name: Autotag
