--- a/action.yml
+++ b/action.yml
@@ -22,14 +22,18 @@ inputs:
 #    required: false
 #    default: |
 #      .*
-#  publish-enable:
-#    description: 'Whether the results should be deployed on GitHub. Defaults to true.'
-#    required: false
-#    default: true
+  publish-enable:
+    description: 'Whether the results should be deployed on GitHub. Defaults to true.'
+    required: false
+    default: true
 
 runs:
   using: "composite"
   steps:
+    - name: Cache Docker images
+      uses: ScribeMD/docker-cache@0.3.7
+      with:
+        key: docker-cache-${{ runner.os }}-${{ hashFiles('.github/workflows/*') }}
     - name: Make ImageMagik permissive
       shell: bash
       run: sudo sed -i 's/rights=".*"/rights="all"/' /etc/ImageMagick-6/policy.xml
