--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.7
+      - name: Install Node
+        uses: actions/setup-node@v4.0.3
+        with:
+          node-version-file: package.json
       - name: Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
