--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,10 @@ runs:
     # Checkout the repository
     - name: Checkout
       uses: danysk/action-checkout@0.2.26
+    - name: Cache PULLED Docker images.
+      uses: ScribeMD/docker-cache@0.5.0
+      with:
+        key: docker-${{ runner.os }}-${{ hashFiles('action.yml') }}
     - name: Compile LaTeX
       uses: DanySK/compile-latex-action@2.2.1
     - name: Autotag
