--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ runs:
     - name: Cache PULLED Docker images.
       uses: ScribeMD/docker-cache@0.5.0
       with:
-        key: docker-${{ runner.os }}-${{ hashFiles('action.yml') }}
+        key: docker-${{ runner.os }}-${{ hashFiles('.github/workflows/*.y*ml') }}
     - name: Compile LaTeX
       uses: DanySK/compile-latex-action@2.2.3
     - name: Autotag
