--- a/action.yml
+++ b/action.yml
@@ -29,11 +29,11 @@ runs:
     # Checkout the repository
     - name: Checkout
       uses: danysk/action-checkout@0.2.27
-    - name: Cache PULLED Docker images.
-      continue-on-error: true
-      uses: ScribeMD/docker-cache@0.5.0
-      with:
-        key: docker-${{ runner.os }}-${{ hashFiles('.github/workflows/*.y*ml') }}
+#    - name: Cache PULLED Docker images.
+#      continue-on-error: true
+#      uses: ScribeMD/docker-cache@0.5.0
+#      with:
+#        key: docker-${{ runner.os }}-${{ hashFiles('.github/workflows/*.y*ml') }}
     - name: Compile LaTeX
       uses: DanySK/compile-latex-action@2.2.6
     - name: Autotag
